<resources>
    <string name="modules">Modules</string>
    <string name="downloads">Downloads</string>
    <string name="superuser">Superuser</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="install">Install</string>
    <string name="section_home">Home</string>
    <string name="section_theme">Themes</string>
    <string name="safetynet">SafetyNet</string>
    <string name="no_connection">No connection available</string>
    <string name="installed_error_md2">is not installed</string>
    <string name="channel_error_md2">has invalid update channel!</string>
    <string name="up_to_date_md2">is up to date</string>
    <string name="obsolete_md2">can be updated!</string>
    <string name="loading_md2">is loading…</string>
    <string name="home_notice_content">Always make sure you\'re using open-source Magisk Manager. Manager of unknown source can perform malicious actions.</string>
    <string name="home_notice_hide">Hide</string>
    <string name="app_changelog">Changelog</string>
    <string name="manager">Manager</string>
    <string name="home_support_title">Support Us</string>
    <string name="home_links_project">Project links</string>
    <string name="home_item_source">Source</string>
    <string name="home_support_content">Magisk is, and always will be, free and open-source. You can however show us that you care by sending a small donation.</string>
    <string name="home_device_security">Security</string>
    <string name="home_device_system">System</string>
    <string name="home_device_build_style">A/B</string>
    <string name="home_device_build_type">SAR</string>
    <string name="home_device_security_secure">Secure</string>
    <string name="home_device_security_outdated">Outdated</string>
    <string name="home_extra_version">Version</string>
    <string name="home_extra_code">Code</string>
    <string name="home_extra_mode">Mode</string>
    <string name="home_extra_connection">Connection</string>
    <string name="home_extra_package">Package</string>
    <string name="home_extra_mode_normal">Normal</string>
    <string name="home_extra_mode_safe">Safe</string>
    <string name="home_extra_mode_stub">Dynamic</string>
    <string name="magisk_version_error">Magisk is not installed</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="invalid_update_channel">Invalid Update Channel</string>
    <string name="safetyNet_check_text">Tap to start SafetyNet check</string>
    <string name="checking_safetyNet_status">Checking SafetyNet status…</string>
    <string name="safetyNet_check_success">SafetyNet Check Success</string>
    <string name="safetyNet_api_error">SafetyNet API Error</string>
    <string name="safetyNet_res_invalid">The response is invalid</string>
    <string name="magisk_up_to_date">Magisk is up to date</string>
    <string name="manager_up_to_date">Magisk Manager is up to date</string>
    <string name="current_installed">Installed: %1$s</string>
    <string name="latest_version">Latest: %1$s</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_magisk_title">Uninstall Magisk</string>
    <string name="uninstall_magisk_msg">All modules will be disabled/removed!\nRoot will be removed!\nYour data potentially encrypted if not already!</string>
    <string name="update">Update</string>
    <string name="core_only_enabled">(Core only mode enabled)</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="keep_force_encryption">Preserve force encryption</string>
    <string name="keep_dm_verity">Preserve AVB 2.0/dm-verity</string>
    <string name="recovery_mode">Recovery Mode</string>
    <string name="install_options_title">Options</string>
    <string name="install_method_title">Method</string>
    <string name="install_next">Next</string>
    <string name="install_start">Let\'s go</string>
    <string name="manager_download_install">Press to download and install</string>
    <string name="download_zip_only">Download Zip Only</string>
    <string name="direct_install">Direct Install (Recommended)</string>
    <string name="install_inactive_slot">Install to Inactive Slot (After OTA)</string>
    <string name="install_inactive_slot_msg">Your device will be FORCED to boot to the current inactive slot after a reboot!\nOnly use this option after OTA is done.\nContinue?</string>
    <string name="select_method">Select Method</string>
    <string name="setup_title">Additional Setup</string>
    <string name="select_patch_file">Select and Patch a File</string>
    <string name="patch_file_msg">Select a raw image (*.img) or an ODIN tarfile (*.tar)</string>
    <string name="reboot_delay_toast">Rebooting in 5 seconds…</string>
    <string name="su_request_title">Superuser Request</string>
    <string name="deny">Deny</string>
    <string name="prompt">Prompt</string>
    <string name="grant">Grant</string>
    <string name="su_warning">Grants full access to your device.\nDeny if you\'re not sure!</string>
    <string name="forever">Forever</string>
    <string name="once">Once</string>
    <string name="tenmin">10 mins</string>
    <string name="twentymin">20 mins</string>
    <string name="thirtymin">30 mins</string>
    <string name="sixtymin">60 mins</string>
    <string name="su_allow_toast">%1$s was granted Superuser rights</string>
    <string name="su_deny_toast">%1$s was denied Superuser rights</string>
    <string name="no_apps_found">No apps found</string>
    <string name="su_snack_grant">Superuser rights of %1$s are granted</string>
    <string name="su_snack_deny">Superuser rights of %1$s are denied</string>
    <string name="su_snack_notif_on">Notifications of %1$s are enabled</string>
    <string name="su_snack_notif_off">Notifications of %1$s are disabled</string>
    <string name="su_snack_log_on">Logging of %1$s is enabled</string>
    <string name="su_snack_log_off">Logging of %1$s is disabled</string>
    <string name="su_revoke_title">Revoke?</string>
    <string name="su_revoke_msg">Confirm to revoke %1$s rights?</string>
    <string name="toast">Toast</string>
    <string name="none">None</string>
    <string name="superuser_toggle_notification">Notifications</string>
    <string name="superuser_toggle_revoke">Revoke</string>
    <string name="superuser_policy_none">No app has asked for superuser permission yet.</string>
    <string name="log_data_none">You\'re log-free, try using your SU enabled apps more.</string>
    <string name="log_data_magisk_none">Magisk logs are empty, that\'s weird.</string>
    <string name="menuSaveLog">Save log</string>
    <string name="menuReload">Reload</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared.</string>
    <string name="pid">PID: %1$d</string>
    <string name="target_uid">Target UID: %1$d</string>
    <string name="command">Command: %1$s</string>
    <string name="safetynet_attest_success">Success!</string>
    <string name="safetynet_attest_failure">Attestation failed!</string>
    <string name="safetynet_attest_loading">Just a sec…</string>
    <string name="safetynet_attest_restart">Try again</string>
    <string name="safetynet_system">System</string>
    <string name="show_system_app">Show system apps</string>
    <string name="hide_filter_hint">Filter by name</string>
    <string name="hide_scroll_up">Scroll up</string>
    <string name="hide_filters">Filters</string>
    <string name="hide_search">Search</string>
    <string name="no_info_provided">(No info provided)</string>
    <string name="no_modules_found">No modules found</string>
    <string name="update_file_created">Module will be updated at next reboot!</string>
    <string name="remove_file_created">Module will be removed at next reboot!</string>
    <string name="remove_file_deleted">Module will not be removed at next reboot!</string>
    <string name="disable_file_created">Module will be disabled at next reboot!</string>
    <string name="disable_file_removed">Module will be enabled at next reboot!</string>
    <string name="author">Created by %1$s</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="reboot_edl">Reboot to EDL</string>
    <string name="module_safe_mode_message">You\'re in safe mode. None of user modules will work.\nThis message will disappear once safe mode is disabled.</string>
    <string name="module_version_author">%1$s by %2$s</string>
    <string name="module_section_pending">Updates</string>
    <string name="module_section_pending_action">Update all</string>
    <string name="module_section_remote">Remote</string>
    <string name="module_state_remove">Remove</string>
    <string name="module_state_restore">Restore</string>
    <string name="module_action_install_external">Install from storage</string>
    <string name="module_update_none">Your modules are up to date!</string>
    <string name="update_available">Update Available</string>
    <string name="installed">Installed</string>
    <string name="not_installed">Not Installed</string>
    <string name="updated_on">Updated on: %1$s</string>
    <string name="sorting_order">Sorting Order</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_update">Sort by last update</string>
    <string name="settings_dark_mode_title">Theme Mode</string>
    <string name="settings_dark_mode_message">Select mode which best suits your style!</string>
    <string name="settings_dark_mode_light">Always Light</string>
    <string name="settings_dark_mode_system">Follow System</string>
    <string name="settings_dark_mode_dark">Always Dark</string>
    <string name="settings_safe_mode_title">Safe Mode</string>
    <string name="settings_core_only_summary" deprecated="true">Enable only core features. MagiskSU and MagiskHide will still be enabled, but no modules will be loaded</string>
    <string name="settings_grid_span_count_title">Grid Column Size</string>
    <string name="settings_grid_span_count_summary">Sets column size for all eligible grid lists. You can set this outside settings by performing pinch gesture.</string>
    <string name="settings_grid_span_count_1">One item per line (Small Screens)</string>
    <string name="settings_grid_span_count_2">Two items per line (Recommended)</string>
    <string name="settings_grid_span_count_3">Three item per line (Tablet/TV)</string>
    <string name="settings_general_category">General</string>
    <string name="settings_dark_theme_title">Dark Theme</string>
    <string name="settings_dark_theme_summary">Enable dark theme</string>
    <string name="settings_download_path_title">Download path</string>
    <string name="settings_download_path_message">Files will be saved to %1$s</string>
    <string name="settings_clear_cache_title">Clear Repo Cache</string>
    <string name="settings_clear_cache_summary">Clear the cached information for online repos. This forces the app to refresh online</string>
    <string name="settings_hide_manager_title">Hide Magisk Manager</string>
    <string name="settings_hide_manager_summary">Repackage Magisk Manager with random package and app names</string>
    <string name="settings_restore_manager_title">Restore Magisk Manager</string>
    <string name="settings_restore_manager_summary">Restore Magisk Manager with original package and app names</string>
    <string name="language">Language</string>
    <string name="system_default">(System Default)</string>
    <string name="settings_update">Update Settings</string>
    <string name="settings_check_update_title">Check Updates</string>
    <string name="settings_check_update_summary">Periodically check for updates in the background</string>
</resources>